--- a/_data/education.yml
+++ b/_data/education.yml
@@ -9,5 +9,5 @@
 - degree: Higher Secondary Certificate (HSC)
   uni: Chittagong College
   year: 2016
-#  award: Most likely to succeed
+#  award: Most likely to succeed.
 #  summary: You can choose to have either a single or multiple awards
