--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,45 +4,45 @@
   position: Learning Phase
   duration: Jan, 2023 &mdash; Present
   summary:
-      - "Developed a strong foundation in Java programming language, including understanding of Object-Oriented Programming (OOP) principles."
-      - "Explored Spring Boot framework and gained hands-on experience in utilizing various related tools such as IntelliJ, VCS (Git, GitHub), SQL, MySQL, and Linux."
-      - "Successfully completed a project on developing a Point of Sale software using Java Spring Boot, applying software engineering principles and industry best practices."
-      - "Acquired proficiency in Python programming language."
+      - "- Developed a strong foundation in Java programming language, including understanding of Object-Oriented Programming (OOP) principles."
+      - "- Explored Spring Boot framework and gained hands-on experience in utilizing various related tools such as IntelliJ, VCS (Git, GitHub), SQL, MySQL, and Linux."
+      - "- Successfully completed a project on developing a Point of Sale software using Java Spring Boot, applying software engineering principles and industry best practices."
+      - "- Acquired proficiency in Python programming language."
 
 
-# Director of Digital Stratgy
+# ubl
 - company: Unilever Bangladesh Limited
   position: ULIP Supply Chain Intern
-  duration:  Oct, 2022 &mdash; Dec, 2022
+  duration:  Oct 2022 &mdash; Dec 2022
   summary:
-    - "Developed automated tool 'No Touch Production Planning' using Microsoft Excel and Visual Basic Programming for streamlining the planning process."
-    - "Successfully completed induction to dive deep into production and planning at the MFPL factory in Gazipur."
-    - "Restructured the Forecast Accuracy & Forecast Bias files, bringing in more automation that aligned with business needs and KPI reporting."
-    - "Proactively collaborated with the Factory Supply Chain team, providing valuable assistance in production planning, scheduling, and material management."
+    - "- Developed automated tool 'No Touch Production Planning' using Microsoft Excel and Visual Basic Programming for streamlining the planning process."
+    - "- Successfully completed induction to dive deep into production and planning at the MFPL factory in Gazipur."
+    - "- Restructured the Forecast Accuracy & Forecast Bias files, bringing in more automation that aligned with business needs and KPI reporting."
+    - "- Proactively collaborated with the Factory Supply Chain team, providing valuable assistance in production planning, scheduling, and material management."
 
 
-# Communications Coordinator
+# bgi
 - company: Bengal Group of Industries
   position: Supply Chain Intern
-  duration:   Jun, 2022  &mdash; Sep, 2022
+  duration:   Jun 2022  &mdash; Sep 2022
   summary:
-    - "Developed and implemented Material Requirement Planning (MRP) dashboard for 04 business units to streamline material flow."
-    - "Optimized the Comparative Statement (CS) process by restructuring and indexing 1400+ files and creating an interactive dashboard using Microsoft Power BI."
-    - "Supported the procurement team in the end-to-end procurement process from indent to GRN using Far Vision ERP."
+    - "- Developed and implemented Material Requirement Planning (MRP) dashboard for 04 business units to streamline material flow."
+    - "- Optimized the Comparative Statement (CS) process by restructuring and indexing 1400+ files and creating an interactive dashboard using Microsoft Power BI."
+    - "- Supported the procurement team in the end-to-end procurement process from indent to GRN using Far Vision ERP."
 
 #Fiverr
 - company: Fiverr
   position: Freelancer
-  duration:   Jun, 2020  &mdash; Oct, 2021
+  duration:   Jun 2020  &mdash; Oct 2021
   summary:
-    - "Aligning academic knowledge with the online market, completed 10+ projects with perfect 5-star ratings."
-    - "Gigs: Typesetting in LATEX, Business Automation using Visual Basic, Forecasting & MRP using MS Excel and MS Power BI."
+    - "- Aligning academic knowledge with the online market, completed 10+ projects with perfect 5-star ratings."
+    - "- Gigs: Typesetting in LATEX, Business Automation using Visual Basic, Forecasting & MRP using MS Excel and MS Power BI."
 
 
 # IRCC
 - company: IEM Robotics and CAD Club (IRCC)
   position: Senior Executive & Trainer
-  duration:   Feb, 2018  &mdash; Apr, 2020
+  duration:   Feb 2018  &mdash; Apr 2020
   summary:
-    - "Trained 30 junior students on a month-long AutoCAD workshop."
-    - "Posters, Banners, and T-shirt designing for marketing purposes of workshops."
+    - "- Trained 30 junior students on a month-long AutoCAD workshop."
+    - "- Posters, Banners, and T-shirt designing for marketing purposes of workshops."
