--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,5 @@
-# Interests
-#- description: Human rights and world affairs
-#- description: Music (baritone saxiphonist)
-#- description: Linguistics
+Interests
+- description: Technology
+- description: Books
+- description: Cycling
+- description: Human functioning optimization
