--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -8,19 +8,19 @@
 
  - award: Dean’s Award
   organization: Faculty of Mechanical Engineering, KUET
-  year: 2018-2019
+  year: 2018,2019
 
-- award:  Finalist at Supply Chain Alliance Upstream, Inter-University Case Competition
+- award:  Finalist at Supply Chain Alliance Upstream, InterUniversity Case Competition
   organization: Supply Chain Alliance, DU FBS
   year: 2021
 
-- award: Semi-finalist at MCC National Casefographic Challenge
+- award: Semifinalist at MCC National Casefographic Challenge
   organization: Department of Management, University of Chittagong
   year: 2020
 
 - award: Technical Scholarship
   organization: Khulna University of Engineering & Technology (KUET)
-  year: 2017-2021
+  year: 2017,2021
 
 
 - award: National Education Board Scholarship, Secondary School Certificate
