recognition error fixed

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,31 +1,25 @@
 # Recognitions
 
 
-- award: 60% CSCA Scholarship winner at the PTAK Prize Global Supply Chain Competition
-  organization: International Supply Chain Education Alliance (ISCEA)
+- award: "60% CSCA Scholarship winner at the PTAK Prize Global Supply Chain Competition"
+  organization: "International Supply Chain Education Alliance (ISCEA)"
   year: 2021
-  # summary: 
-
- - award: Dean’s Award
-  organization: Faculty of Mechanical Engineering, KUET
-  year: 2018,2019
-
-- award:  Finalist at Supply Chain Alliance Upstream, InterUniversity Case Competition
-  organization: Supply Chain Alliance, DU FBS
+- award: "Dean’s Award"
+  organization: "Faculty of Mechanical Engineering, KUET"
+  year: "2018 - 2019"
+- award: "Finalist at Supply Chain Alliance Upstream, InterUniversity Case Competition"
+  organization: "Supply Chain Alliance, DU FBS"
   year: 2021
-
-- award: Semifinalist at MCC National Casefographic Challenge
-  organization: Department of Management, University of Chittagong
+- award: "Semifinalist at MCC National Casefographic Challenge"
+  organization: "Department of Management, University of Chittagong"
   year: 2020
-
-- award: Technical Scholarship
-  organization: Khulna University of Engineering & Technology (KUET)
-  year: 2017,2021
-
-
-- award: National Education Board Scholarship, Secondary School Certificate
-  organization: National Education Board
+- award: "Technical Scholarship"
+  organization: "Khulna University of Engineering & Technology (KUET)"
+  year: "2017 - 2021"
+- award: "National Education Board Scholarship, Secondary School Certificate"
+  organization: "National Education Board"
   year: 2016
+
 
 
 
