--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,14 @@ resume_contact_address:         "North Badda, Dhaka-1212"
 resume_header_contact_info:     "North Badda, Dhaka-1212 • +8801753377808 • gmiqbalm@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p class=\"text-justify\">
-A driven professional with a strong engineering background and expertise in supply chain. Seeking to transition into software engineering, unlocking my untapped potential. Committed to leveraging technology, fostering growth, and delivering transformative solutions within a collaborative community.
-</p>"
+resume_header_intro: "<p class=\"text-justify\">\nA driven professional with a strong engineering background and expertise in supply chain. Seeking to transition into software engineering, unlocking my untapped potential. Committed to leveraging technology, fostering growth, and delivering transformative solutions within a collaborative community.\n</p>"
+
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+# resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
