line break fixed.

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,15 @@
 # Degree
-- degree: Bachelor of Science, Industrial and Production Engineering
+- degree: Bachelor of Science, Industrial and Production Engineering (IPE)
   uni: Khulna University of Engineering & Technology (KUET)
   year: 2017 &mdash; 2022
+  result: "CGPA: 3.65 / 4.00"
 #  awards:
 #    - award: Summa Cumme Laude graduate
 #  summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: Higher Secondary Certificate (HSC)
   uni: Chittagong College
-  year: 2016
+  year: 2014 &mdash; 2016
+  result: "CGPA: 5.00 / 5.00"
 #  award: Most likely to succeed.
 #  summary: You can choose to have either a single or multiple awards
